WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158904
REGRESSION (
r191499
): Tab content "jumps" down when focusing tabs that load in the background
https://bugs.webkit.org/show_bug.cgi?id=158904
Summary
REGRESSION (r191499): Tab content "jumps" down when focusing tabs that load i...
Tim Horton
Reported
2016-06-18 00:42:12 PDT
REGRESSION (
r191499
): Tab content "jumps" down when focusing tabs that load in the background
Attachments
Patch
(2.85 KB, patch)
2016-06-18 00:42 PDT
,
Tim Horton
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-06-18 00:42:29 PDT
Created
attachment 281610
[details]
Patch
Tim Horton
Comment 2
2016-06-18 00:44:51 PDT
It should be possible to write an API test that ensures that top content inset/view state changes are deferred until endDeferringViewInWindowChanges. Will try that at some point.
Sam Weinig
Comment 3
2016-06-18 17:36:48 PDT
Comment on
attachment 281610
[details]
Patch Any way to test this?
Tim Horton
Comment 4
2016-06-20 10:12:08 PDT
(In reply to
comment #3
)
> Comment on
attachment 281610
[details]
> Patch > > Any way to test this?
That's what the comment above yours is about. I'm going to land this, but also make a test because I think it should be straightforward.
Tim Horton
Comment 5
2016-06-20 10:13:31 PDT
http://trac.webkit.org/changeset/202230
Tim Horton
Comment 6
2016-06-20 11:51:10 PDT
Test:
https://bugs.webkit.org/show_bug.cgi?id=158947
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug