REGRESSION (r191499): Tab content "jumps" down when focusing tabs that load in the background https://bugs.webkit.org/show_bug.cgi?id=158904 <rdar://problem/26025831>

Reviewed by Sam Weinig.

* UIProcess/Cocoa/WebViewImpl.h:
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::viewDidMoveToWindow):
During the large refactor that was r191499, we somehow ended up with two
different members for the same thing - one that got written, and one that
got read. We should only have one.


Canonical link: https://commits.webkit.org/177004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202230 268f45cc-cd09-0410-ab3c-d52691b4dbfc